--- a/index.html
+++ b/index.html
@@ -120,18 +120,18 @@
         <section class="showcase">
             <div class="container-fluid p-0">
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/foto-1.png');"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/libros/libro1_1.png');"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Ágata y Ocre, el bosque encantado</h2>
-                        <p class="lead mb-0" style="font-size: 1.3rem;">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="lead mb-0" style="font-size: 1.3rem;">La princesa Ágata es traviesa y le gusta explorar, y volando con Ocre se encontrarán con un gran desafío al entrar al bosque encantado.</p>
                         <a href="single.html?nro=0" title="Ágata y Ocre" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información sobre este libro</a>
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/foto-1.png');"></div>
+                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/libros/libro2_1.png');"></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>Días de oro, el océano maldito</h2>
-                        <p class="lead mb-0" style="font-size: 1.3rem;">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="lead mb-0" style="font-size: 1.3rem;">El océano maldito es extraño y misterioso, pero cuenta la leyenda que quien se atreva a nadar hacia sus profundidades, en oro se convertirá.</p>
                         <a href="single.html?nro=1" title="Océano maldito" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información sobre este libro</a>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/foto-1.png');"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Un pacto entre unicornio y phoenix</h2>
-                        <p class="lead mb-0" style="font-size: 1.3rem;">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="lead mb-0" style="font-size: 1.3rem;">Iris,un unicornio atrapado, hace un acuerdo con Luz, un phoenix que ha perdido su huevo, ¿podrán lograr lo que se proponen y ayudarse mutuamente?</p>
                         <a href="single.html?nro=2" title="Unicornio y phoenix" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información sobre este libro</a>
                     </div>
                 </div>
