--- a/single.html
+++ b/single.html
@@ -188,7 +188,7 @@
                 const data = await consulta.json();
                 const cuantos = data.length;
                 //Como n es siempre número: Ya no tengo posibilidad de null
-                document.querySelector("#catalogo").innerHTML = '<div class="col"><h2 class="fs-1">' + data[n].nombre + "</a></h2><p>" + data[n].texto + "</p><small>Por " + data[n].autor + "</small></div>";
+                document.querySelector("#catalogo").innerHTML = '<div class="col"><h2 class="fs-1">' + data[n].nombre + "</a></h2><p>" + data[n].abstract + "</p><small>Por " + data[n].autor + "</small><br><small>Ilustrado por Madu Muñoz</small></div>";
                 //un forEach para cada foto del trabajo
                 data[n].fotos.forEach((x) => {
                     document.querySelector("#catalogo").innerHTML += '<div class="col"><img src="' + x + '" class="w-100 rounded shadow-sm"></div>';
