--- a/single.html
+++ b/single.html
@@ -85,12 +85,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="proyecto.html">Sobre el proyecto</a>
                         </li>
-                        <!--<li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link" href="participa.html">Participa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tarjetas.html">Tarjetas</a>
-                        </li>-->
+                            <a class="nav-link" href="https://www.figma.com/proto/qsVFA8AIGMi1Ouy2ftAdJ1/%C3%81gata-y-Ocre-%7C-T%C3%ADtulo---%C3%A9rase...?type=design&node-id=267-76&t=57rh9BEqElPmIzuy-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=267%3A76&mode=design">Ingresar</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="catalogo.html">Catálogo</a>
                         </li>
