--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/foto-1.png');"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/libros/libro3_1.png');"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Un pacto entre unicornio y phoenix</h2>
                         <p class="lead mb-0" style="font-size: 1.3rem;">Iris,un unicornio atrapado, hace un acuerdo con Luz, un phoenix que ha perdido su huevo, ¿podrán lograr lo que se proponen y ayudarse mutuamente?</p>
