--- a/participa.html
+++ b/participa.html
@@ -103,10 +103,10 @@
         </header>
 
         <div class="row align-items-center py-5">
-                    <div class="col-12 text-center">
+                    <div class="text-center mb-5">
                         <h1 class="fw-medium" style="color: black; font-size: 3rem;">¿Cómo funciona?</h1>
-                        <p class="lead" style="color: black;">Para participar deberás descargar la plantilla a continuación e imprimirla. Luego, en ella podrás crear tu propio cuento mágico. Una vez terminado puedes seguir los pasos a continuación.</p>
-                        
+                        <p class="lead" style="color: black;">Para participar deberás crear tu propio cuento mágico con la plantilla descargable.</p>
+                        <img src="img/como-funciona.png" width="450px">
                     </div>
                 </div>
 
